[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2021.4.26"
PyNaCl = "^1.4.0"
"discord.py" = "^1.7.2"
aioproperty = "^0.3.2"
bs4 = "^0.0.1"
pyrandmeme = "^0.0.6"
ffmpeg = "^1.4"
async-timeout = "^3.0.1"
discord = "^1.0.1"
flask = "^2.0.0"
discord-py-slash-command = "^2.3.1"
gTTS = "^2.2.3"
randfacts="^0.9.0"
discord-ext-slash = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
